Fixed layout overflow

--- a/studytrack/src/components/Dashboard/Dashboard.css
+++ b/studytrack/src/components/Dashboard/Dashboard.css
@@ -2,10 +2,20 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 .App {
 	font-family: 'Roboto', sans-serif;
+	height: 100vh;
 }
 
+.layout {
+	min-height: 100vh;
+	width: 100%;
+}
 .content {
-	padding: 1rem;
+	padding: 0 50px 0 0;
+	margin-top: 64px;
+	margin-left: 200px;
+	width: 100%;
+	transition: all 0.2s ease;
+	margin-bottom: 50px;
 }
 
 .events {
@@ -37,8 +47,8 @@
 	border-radius: 2px;
 	padding: 20px 20px 80px 20px;
 	background-color: #fff;
-	min-height: 60vh;
 	font-family: 'Roboto', sans-serif;
+	width: 100%;
 }
 
 .profil > h1,
@@ -54,4 +64,10 @@
 	font-size: 30px;
 	text-align: left;
 	margin: 50px 0 30px 20px;
+}
+
+.ant-layout.ant-layout-has-sider > .ant-layout,
+.ant-layout.ant-layout-has-sider > .ant-layout-content {
+	width: 100%;
+	margin-left: 250px;
 }
