--- a/studytrack/src/components/Dashboard/NavBar.css
+++ b/studytrack/src/components/Dashboard/NavBar.css
@@ -4,6 +4,13 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 0;
+	position: fixed;
+	z-index: 1000;
+	width: 100%;
+	left: 0;
+	top: 0;
+	right: 0;
+	height: 55px;
 }
 
 .navbar img {
